[project]
name = "hf-course-final"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "llama-index>=0.12.33",
    "llama-index-llms-google-genai>=0.1.8",
    "llama-index-llms-openai>=0.3.38",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "speechrecognition>=3.14.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:aifc was removed.*standard-aifc:DeprecationWarning:speech_recognition",
]